<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textSize="15sp" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="60dp"
        android:text="@string/location"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textView3"
        android:text="@string/Location"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:text="@string/daiemail"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/mobile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/contacts"
        android:textSize="15sp" />

</RelativeLayout>